Lift to Kafka clients 3.6, Spring Kafka 3.1, Spring Boot 3.2
* Update and clean up POMs. Spring Boot 3.2 baseline.

* README: Update experiments to reflect current error handlers in Spring Kafka.

* Fix up the code.